--- a/css/style.css
+++ b/css/style.css
@@ -70,13 +70,23 @@ filter: drop-shadow(6px 6px 6px rgba(0, 0, 0, 0.25));
 .aboutme{
     display: flex;
 align-items: center;
-justify-content: center;
+justify-content:center;
+width: 100%;
 flex-direction: column;
 }
 .details{
     font-family: 'Bebas Neue' Arial, Helvetica, sans-serif;
     color:slategray;
-    font-size: 24px;
+    font-size: 24px;    
     width: 40%;
     filter: drop-shadow(6px 6px 6px rgba(0, 0, 0, 0.25));
+}
+.aboutmeheads{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+}.aboutmemain{
+    display: flex;
+    width:100%;
+    
 }
