--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -164,6 +164,6 @@ background-image: url('https://cdn1.mecum.com/auctions/kc0415/kc0415-208904/imag
         color: #888;
         font-size: 16px;
        }
-       html, h1, h2, h3, h4, h5, h6, a,{
+       html, h1, h2, h3, h4, h5, h6, a{
         font-family: "Karantina";
        }
