--- a/TimeTrackingLand/css/main.css
+++ b/TimeTrackingLand/css/main.css
@@ -1,99 +1,149 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap');
 
 :root {
- margin: 0;
-  --main-color: rgba(113, 168, 158, 1);
-  --background-color: rgba(249, 249, 249, 1);
-}
-
-
-/* use variable this way color: var(--main-color)  */
-
-body {
-  font-family: 'Source Sans Pro', sans-serif;
-  background-color: var(--background-color);
-  margin:0; 
-}
-.introduction{
-  --background-color:var(--background-color);
- height: 100vh;
- width: 100vw;
- padding: 46px 120px;
- box-sizing: border-box;
-max-height: 100vh;
-}
-.logo{
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-}
-header{
-  display: flex;
-  align-items: center;
-  justify-content:space-between;
- width: 100%;
-}
-.content{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.description{
-  width:48%;
-}
-.hightext{
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  margin: 0;
+   --main-color: rgba(113, 168, 158, 1);
+   --background-color: rgba(249, 249, 249, 1);
+ }
+ 
+ 
+ /* use variable this way color: var(--main-color)  */
+ 
+ body {
+   font-family: 'Source Sans Pro', sans-serif;
+   background-color: var(--background-color);
+   margin:0; 
+ }
+ .introduction{
+   --background-color:var(--background-color);
+  height: 100vh;
+  width: 100vw;
+  padding: 50px 50px;
+  box-sizing: border-box;
+ max-height: 100vh;
+ }
+ .logo{
+   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+ }
+ header{
+   display: flex;
+   align-items: center;
+   justify-content:space-between;
   width: 100%;
-}
-h1{
-  font-size: 48px;
-font-weight: 400;
-}
-h2{
-  font-size: 24px;
-font-weight: 400;
-}
-.dude{
-  /* width: 40%;--> */
-  max-width: 40%;
-  margin-top: 5%;
-}
-.button{
-width: 50%;
-padding: 2% 3% 2% 3%;
-align-self:center;
-box-sizing: border-box;
-border-radius: 8px;
-background-color:  #71A89E;
-font-family: 'Source Sans Pro', sans-serif;
-font-size: 24px;
-margin-top: 10%;
-color:whitesmoke;
-box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.6) ;
-border-width: 3px;
-border-color: black;
-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-outline: none;
-}
-.nav{
+ }
+ .content{
+   display: flex;
+   align-items: center;
+   justify-content: space-around ;
+ width: 100%;
+ }
+ .description{
+   width:40%;
+ }
+ .hightext{
+   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+   width: 100%;
+ }
+ h1{
+   font-size: 48px;
+ font-weight: 400;
+ }
+ h2{
+   font-size: 24px;
+ font-weight: 400;
+ }
+ .dude{
   width: 40%;
-  align-items: center ;
-  font-size: 24px;
-}
-.NavigationItem{
-  width: 50%;
-  color: #303031;
-  font-weight: 500;
-  margin-left: 40px;
-  font-family: 'Source Sans Pro', sans-serif;
-  text-decoration: none ;
-  filter: drop-shadow(6px 6px 6px rgba(0, 0, 0, 0.25));
-  justify-content: space-around;
-}
-.NavigationItem2{
+  max-height:vh;
+ }
+ .button{
  width: 50%;
-  color:#71A89E;
-  font-weight: 500;
-  margin-left: 40px;
-  font-family: 'Source Sans Pro', sans-serif;
-  text-decoration: none ;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-}
+ padding: 2% 3% 2% 3%;
+ align-self:center;
+ box-sizing: border-box;
+ border-radius: 8px;
+ background-color:  #71A89E;
+ font-family: 'Source Sans Pro', sans-serif;
+ font-size: 24px;
+ margin-top: 10%;
+ color:whitesmoke;
+ box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.6) ;
+ border-width: 3px;
+ border-color: black;
+ filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+ outline: none;
+ }
+ .nav{
+   width: 50%;
+   align-items: center ;
+   font-size: 24px;
+   justify-content: space-between;
+   display: flex;
+ }
+ .NavigationItem{
+   width: 25%;
+   color: #303031;
+   font-weight: 500;
+   font-family: 'Source Sans Pro', sans-serif;
+   text-decoration: none ;
+   filter: drop-shadow(6px 6px 6px rgba(0, 0, 0, 0.25));
+ 
+ }
+ .NavigationItem2{
+  width: 25%;
+   color:#71A89E;
+   font-weight: 500;
+   margin-left: 40px;
+   font-family: 'Source Sans Pro', sans-serif;
+   text-decoration: none ;
+   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+ }
+ @media (max-width:768px){
+   .description{
+     width: 100%;
+   }
+   .dude{
+     width: 67%;
+   }
+   .content{
+     flex-wrap: wrap-reverse;
+   }
+   .description h1{
+     font-size:24px;
+   }
+   .description h2{
+     font-size:14px;
+   }
+   .nav{
+     font-size: 20px;
+   }
+ }
+ @media(max-width:576px){
+   body, p, a, h4 {
+ 
+     font-size: 10px;
+     
+     }
+     .button{
+       width: 100%;
+     }
+     .dude{
+       width: 100%;
+     }
+ }
+ @media(max-width:992px){
+   .nav{
+     width: 70%;
+   }
+   .dude{
+     width: 67%;
+   }
+   .description{
+     width: 100%;
+   }
+   .description h2{
+     font-size: 22px;
+   }
+   
+ }
+ 
