--- a/TimeTrackingLand/css/main.css
+++ b/TimeTrackingLand/css/main.css
@@ -36,13 +36,15 @@
    align-items: center;
    justify-content: space-around ;
  width: 100%;
+ margin-top:32px;
  }
  .description{
-   width:40%;
+   width:47%;
  }
  .hightext{
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    width: 100%;
+   padding: 8px 2px 8px 2px;
  }
  h1{
    font-size: 48px;
@@ -58,13 +60,13 @@
  }
  .button{
  width: 50%;
- padding: 2% 3% 2% 3%;
+ padding: 16px 20px 16px 20px;
  align-self:center;
  box-sizing: border-box;
  border-radius: 8px;
  background-color:  #71A89E;
  font-family: 'Source Sans Pro', sans-serif;
- font-size: 24px;
+ font-size: 18px;
  margin-top: 10%;
  color:whitesmoke;
  box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.6) ;
@@ -73,7 +75,7 @@
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
  outline: none;
  }
- .nav{
+ nav{
    width: 50%;
    align-items: center ;
    font-size: 24px;
@@ -81,32 +83,69 @@
    display: flex;
  }
  .NavigationItem{
-   width: 25%;
+   width: 20%;
    color: #303031;
    font-weight: 500;
    font-family: 'Source Sans Pro', sans-serif;
    text-decoration: none ;
    filter: drop-shadow(6px 6px 6px rgba(0, 0, 0, 0.25));
- 
+   white-space: nowrap;
  }
+ .navbutton{ display: none;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  font-family: 'Source Sans Pro', sans-serif;
+  color:black;
+  width: 98px;
+  height: 37px; 
+  background-color: white;
+  border: 1px solid #22322F;
+  border-radius: 8px;
+  font-style: normal;
+font-weight: bold;
+font-size: 12px;
+font-family: 'Source Sans Pro', sans-serif;
+align-items: center;
+justify-content: center;
+}
+.navbutton p{
+  margin-left: 12px;
+}
  .NavigationItem2{
-  width: 25%;
+  width: 20%;
    color:#71A89E;
    font-weight: 500;
-   margin-left: 40px;
+   margin-left: 20px;
    font-family: 'Source Sans Pro', sans-serif;
    text-decoration: none ;
    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
  }
- @media (max-width:768px){
-   .description{
-     width: 100%;
+
+ @media(max-width:1074px){
+   h1{
+     font-size:36px;
    }
+   h2{
+     font-size:16px;
+   }
+ }
+ @media(max-width:992px){
+  nav{
+    width: 60%;
+  }
+  .description{
+    width: 48%;
+  }
+  .button{
+    width: 70%;
+  }
+}
+ @media (max-width:768px){
    .dude{
-     width: 67%;
+     width:54%;
    }
    .content{
      flex-wrap: wrap-reverse;
+     align-items: center;
    }
    .description h1{
      font-size:24px;
@@ -114,8 +153,19 @@
    .description h2{
      font-size:14px;
    }
-   .nav{
-     font-size: 20px;
+   nav{
+     font-size: 18px;
+   }
+   .hightext{
+     box-shadow:none;
+     width: 100%;
+   }
+   .description{
+     display: flex;
+     width: 100%;
+   }
+   .button{
+     margin: 0%;
    }
  }
  @media(max-width:576px){
@@ -125,25 +175,63 @@
      
      }
      .button{
-       width: 100%;
+       width: 70%;
      }
      .dude{
-       width: 100%;
+       width: 70%;
      }
- }
- @media(max-width:992px){
-   .nav{
-     width: 70%;
-   }
-   .dude{
-     width: 67%;
-   }
-   .description{
-     width: 100%;
-   }
-   .description h2{
-     font-size: 22px;
-   }
-   
- }
- 
+     .NavigationItem{
+       display: none;
+       filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+       font-family: 'Source Sans Pro', sans-serif;
+       color: black;
+       width: 98px;
+       height: 16px; 
+       background-color: white;
+       border:1px solid #22322F;
+       font-style: normal;
+     font-size: 12px;
+     }
+     .NavigationItem2{
+       display: none;
+       filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+       font-family: 'Source Sans Pro', sans-serif;
+       color:#71A89E;
+       width: 98px;
+       height: 16px; 
+       background-color: white;
+       border:1px solid #22322F;
+       font-style: normal;
+     font-size: 12px;
+     margin:0;
+     }
+    .navbutton{
+      display:flex;
+    }
+    nav{
+     width:98px;
+      flex-direction: column;
+      position: fixed;
+      right:50px;
+      z-index: 1;
+      top: 50px;
+    }
+    .navbutton:hover{
+      background-color: gray;
+    }
+    .navbutton:focus ~ .NavigationItem{
+      display: block;
+    }
+    .navbutton:focus ~ .NavigationItem2{
+      display: block;
+    }
+    .NavigationItem:hover{
+      background-color: gray;
+    }
+    .NavigationItem2:hover{
+      background-color: gray;
+    }
+    .description{
+      display: block;
+    }
+  }
